update configuration